tests/testcases/valid/12_goto_and_misc.ciel
fn main() -> int {
    int error_code = 1;
    if (error_code != 0) goto cleanup;

cleanup:
    int cleaned = 1;
    int value = 123;
    int thousands = value / 1000;
    int hundreds = (value / 100) % 10;
    int tens = (value / 10) % 10;
    int ones = value % 10;
    return error_code;
}
