tests/testcases/invalid/semantic/72_postfix_decrement_on_rvalue.ciel
// Error: postfix decrement requires lvalue operand
int main() {
    int a = 10;

    // Error: (a--) returns rvalue, cannot decrement again
    (a--)--;

    return 0;
}
